--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation'cn.jzvd:jiaozivideoplayer:7.0_preview'
+    implementation 'cn.jzvd:jiaozivideoplayer:7.0_preview'
+    implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
+
 
 }
