--- a/qmuidemo/build.gradle
+++ b/qmuidemo/build.gradle
@@ -92,4 +92,7 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.14.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    //picture
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
