--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -27,8 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support:design:28.0.0-rc02'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     testImplementation 'junit:junit:4.12'
@@ -43,5 +42,10 @@ dependencies {
     implementation 'cn.jzvd:jiaozivideoplayer:7.0_preview'
     implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
 
-
+    // ui
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation 'com.qmuiteam:qmui:1.2.0'
+    implementation 'com.qmuiteam:arch:0.3.1'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 }
