--- a/qmuidemo/build.gradle
+++ b/qmuidemo/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 def getVersion() {
-  def gitVersion
-  try {
-	def cmd = 'git rev-list HEAD --count'
-	gitVersion = cmd.execute().text.trim().toInteger()
-  } catch (Exception e) {
-	gitVersion = 1
-  }
-  return gitVersion
+    def gitVersion
+    try {
+        def cmd = 'git rev-list HEAD --count'
+        gitVersion = 1
+    } catch (Exception e) {
+        gitVersion = 1
+    }
+    return gitVersion
 }
 
 def gitVersion = getVersion()
@@ -58,7 +58,7 @@ android {
     }
     // 避免 lint 检测出错时停止构建
     lintOptions {
-      abortOnError false
+        abortOnError false
     }
 }
 
@@ -67,14 +67,13 @@ android {
 //    parentTheme "AppRootTheme"
 //}
 
-
 // 加@aar与不加@aar的区别：
 // http://stackoverflow.com/questions/30157575/why-should-i-include-a-gradle-dependency-as-aar
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:$appcompatVersion"
-    implementation "com.google.android.material:material:$materialVersion"
     implementation "com.jakewharton:butterknife:$butterknifeVersion"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 //    implementation 'com.qmuiteam:qmuilint:1.0.1'
 //    implementation 'com.qmuiteam:arch:0.3.1'
@@ -95,4 +94,8 @@ dependencies {
     //picture
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //video
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.7.3'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.7.3'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
 }
