--- a/qmuidemo/build.gradle
+++ b/qmuidemo/build.gradle
@@ -4,7 +4,7 @@ def getVersion() {
     def gitVersion
     try {
         def cmd = 'git rev-list HEAD --count'
-        gitVersion = 1
+        gitVersion = cmd.execute().text.trim().toInteger()
     } catch (Exception e) {
         gitVersion = 1
     }
@@ -72,8 +72,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.jakewharton:butterknife:$butterknifeVersion"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 //    implementation 'com.qmuiteam:qmuilint:1.0.1'
 //    implementation 'com.qmuiteam:arch:0.3.1'
