找回密码 注册

--- a/qmuidemo/src/main/AndroidManifest.xml
+++ b/qmuidemo/src/main/AndroidManifest.xml
@@ -38,12 +38,41 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
             >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:launchMode="standard"/>
+
+        <activity
+            android:name=".activity.RecoverPasswordActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:launchMode="standard"/>
+
+
+        <activity android:name=".activity.ResetPasswordActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:launchMode="standard">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="10.135.197.13" android:scheme="http" />
+            </intent-filter>
+        </activity>
+
+
 
     </application>
 
