--- a/login/uwsgi.ini
+++ b/login/uwsgi.ini
@@ -1,7 +1,8 @@
 # Django-related settings
 
 socket = :8092
-# the base directory (full path)chdir           = /home/ubuntu/blog
+# the base directory (full path)
+chdir           = /project/19-software-engineering/login
 
 # Django s wsgi file
 module          = mysite.wsgi
