--- a/login/mysite/mysite_nginx.conf
+++ b/login/mysite/mysite_nginx.conf
@@ -2,7 +2,9 @@ upstream django {    # server
     server 127.0.0.1:8092; # for a web port socket (we'll use this first)} 和uwsgi端口一致
 # configuration of the server
 server {    # the port your site will be served on
-    listen      81;    # the domain name it will serve for    server_name .example.com; # substitute your machine's IP address or FQDN
+    listen      80;
+    # the domain name it will serve for
+    server_name 101.132.71.247 # substitute your machine's IP address or FQDN
     charset     utf-8;
     # max upload size
     client_max_body_size 75M;   # adjust to taste
@@ -13,7 +15,7 @@ server {    # the port your site will be served on
         alias /root/project/19-software-engineering/login/media;  # your Django project's media files - amend as required
     }
     location /static {
-        alias /root/project/19-software-engineering/login; # your Django project's static files - amend as required
+        alias /root/project/19-software-engineering/login/static; # your Django project's static files - amend as required
     }
     # Finally, send all non-media requests to the Django server.
     location / {        uwsgi_pass  django;
