--- a/login/mysite/mysite_nginx.conf
+++ b/login/mysite/mysite_nginx.conf
@@ -21,4 +21,11 @@ server {    # the port your site will be served on
     location / {        uwsgi_pass  django;
                         include   /etc/nginx/conf/uwsgi_params; # the uwsgi_params file you installed
     }
+    location /ws {
+        proxy_pass http://unix:/tmp/daphne.sock;
+        proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 }
