--- a/login/mysite/mysite_nginx.conf
+++ b/login/mysite/mysite_nginx.conf
@@ -21,11 +21,15 @@ server {    # the port your site will be served on
     location / {        uwsgi_pass  django;
                         include   /etc/nginx/conf/uwsgi_params; # the uwsgi_params file you installed
     }
-    location /ws {
-        proxy_pass http://unix:/tmp/daphne.sock;
-        proxy_set_header Host $http_host;
+    location /ws/deploy {
+        proxy_pass http://wsbackend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-    }
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+  }
 }
