--- a/qmuidemo/src/main/AndroidManifest.xml
+++ b/qmuidemo/src/main/AndroidManifest.xml
@@ -31,7 +31,16 @@
             android:name=".activity.QDMainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" >
+        </activity>
+
+        <activity
+            android:name=".activity.SearchTaskActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" >
+        </activity>
+
         <activity
             android:name=".activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
