--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:appComponentFactory"
-        android:appComponentFactory="任意字符">
+        android:appComponentFactory="任意字符"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".views.HomeActivity"
             android:label="@string/title_activity_home" />
